Changelog
=========


1.0.1 (unreleased)
------------------

- Nothing changed yet.


1.0.0 (2016-04-14)
------------------

- Add browserlayer.
  [mathias.leimgruber]

- Initial implementation
  [jone]