@@ -1,0 +1,9 @@
+[buildout]
+extends =
+    http://kgs.4teamwork.ch/sources.cfg
+
+extensions +=
+    mr.developer
+
+auto-checkout =
+    ftw.mobile
