@@ -1,5 +1,6 @@
 [buildout]
 extends =
     https://raw.github.com/4teamwork/ftw-buildouts/master/test-plone-4.3.x.cfg
+    sources.cfg
 
 package-name = ftw.servicenavigation
