@@ -5,7 +5,8 @@ Changelog
 1.0.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Implement ftw.mobile button.
+  [mathias.leimgruber]
 
 
 1.0.0 (2016-04-14)
